<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('learning_insights', function (Blueprint $table) {
            $table->id();
            $table->foreignId('user_id')->constrained()->onDelete('cascade');
            $table->string('insight_type'); // Added
            $table->json('data'); // Renamed from insights
            $table->timestamp('generated_at')->nullable(); // Added
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('learning_insights');
    }
};
